# name: TestSensors.test_get_sensor[0]
  dict({
    '__typename': 'Sensor',
    'minIntervalSeconds': 30,
    'name': 'always_no_config_sensor',
    'nextTick': None,
    'sensorState': dict({
      'runs': list([
      ]),
      'runsCount': 0,
      'status': 'STOPPED',
      'ticks': list([
      ]),
    }),
    'sensorType': 'STANDARD',
    'targets': list([
      dict({
        'mode': 'default',
        'pipelineName': 'no_config_job',
        'solidSelection': None,
      }),
    ]),
  })
# ---
# name: TestSensors.test_get_sensors[0]
  list([
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'always_error_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'always_no_config_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 60,
      'name': 'custom_interval_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'dynamic_partition_requesting_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'dynamic_partitioned_assets_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'fresh_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'logging_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'many_asset_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'single_asset_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'multi_no_config_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'never_no_config_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'once_no_config_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'run_status',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'running_in_code_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'RUNNING',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'single_asset_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'single_asset_job',
          'solidSelection': None,
        }),
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'the_failure_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
      ]),
    }),
    dict({
      'description': None,
      'minIntervalSeconds': 30,
      'name': 'update_cursor_sensor',
      'sensorState': dict({
        'runs': list([
        ]),
        'runsCount': 0,
        'status': 'STOPPED',
        'ticks': list([
        ]),
      }),
      'targets': list([
        dict({
          'mode': 'default',
          'pipelineName': 'no_config_job',
          'solidSelection': None,
        }),
      ]),
    }),
  ])
# ---
# name: TestSensors.test_get_sensors_filtered[0]
  list([
    dict({
      'name': 'running_in_code_sensor',
      'sensorState': dict({
        'status': 'RUNNING',
      }),
    }),
  ])
# ---
